2003-04-09  Tom Yu  <tlyu@mit.edu>

	* kerberos.c (kerberos4_status): Always copy in username if
	present.  Patch from Nathan Neulinger to make "-a user" work.

	* kerberos5.c (kerberos5_status): Always copy in username if
	present.  Patch from Nathan Neulinger to make "-a user" work.

2003-04-01  Nalin Dahyabhai  <nalin@redhat.com>

	* kerberos5.c (kerberos5_is): Check principal name length before
	examining components.

2003-01-07  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.orig: Deleted.

2002-12-12  Tom Yu  <tlyu@mit.edu>

	* kerberos.c (kerberos4_send, kerberos4_is): Use
	krb_get_err_text() instead of krb_err_txt array.

	* strcasecmp.c: Include sys/types.h rather than sys/cdefs.h.

2002-11-15  Ezra Peisach  <epeisach@bu.edu>

	* enc-proto.h, enc_des.c, encrypt.c: Unsigned/signed cleanups.

	* forward.c: Include unistd.h if present on machine.

	* misc-proto.h misc.c (auth_encrypt_user): Declare argument as
	const.

	* auth.c: Cast argument auth_encrypt_user. auth_gen_printsub() and
	auth_printsub() take unsigned int as buffer length.

	* auth.h, auth-proto.h, kerberos.c, kerberos5.c, spx.c:
	auth_gen_printsub(), auth_printsub(), kerberos4_printsub(),
	kerberos5_printsub(), spx_printsub() take unsigned int as length
	argument.

	* configure.in: Check for unistd.h

2002-08-29  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Revert $(S)=>/ change, for Windows support.

2002-08-23  Ken Raeburn  <raeburn@mit.edu>

	* Makefile.in: Change $(S)=>/ and $(U)=>.. globally.

2002-04-12  Sam Hartman  <hartmans@mit.edu>

	* kerberos5.c forward.c: Build without k5-int.h

2002-03-29  Tom Yu  <tlyu@mit.edu>

	* kerberos.c, kerberos5.c (Data): Reindent to 8 columns. (yes,
	this is original BSD style)

2002-03-28  Ken Raeburn  <raeburn@mit.edu>

	* kerberos.c: Include errno.h.

2002-03-26  Sam Hartman  <hartmans@mit.edu>

	* kerberos.c kerberos5.c (Data): Fix indentation; fix termination condition

2002-03-14  Sam Hartman  <hartmans@mit.edu>
